k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
  labels:
    app: hivebox
spec:
  selector:
    app: hivebox
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: LoadBalancer
